--- a/src/components/partials/prep-time.scss
+++ b/src/components/partials/prep-time.scss
@@ -55,7 +55,7 @@
 
 .prep-time__ready-in {
   padding: 33px 0 30px;
-  background: url(../../src/img/ready_in_bckgr.png) center center no-repeat;
+  background: url(..//img/ready_in_bckgr.png) center center no-repeat;
   text-align: center;
 }
 
